# arrange

./: .env.exemple  .gitignore  Dockerfile  Dockerfile.ollama  compose.yaml  init.sql  pyproject.toml
arrange/: app.py  config.py  security.py
arrange/core/: connection.py  database.py  model.py  vectorstore.py
arrange/models/: arrange_models.py  doc_models.py  param_models.py  patient_models.py  user_models.py
arrange/repositories/: arrange_repository.py  doc_repository.py  param_repository.py  patient_repository.py  user_repository.py
arrange/routers/: arrange.py  docs.py  param.py  patient.py  users.py
arrange/services/: arrange_service.py  doc_service.py  param_service.py  patient_service.py  user_service.py
tests/: conftest.py  test_app.py  test_arrange.py  test_docs.py  test_params.py  test_user.py
tests/factories/: doc_factory.py  param_factory.py  user_factory.py
